Using KaTeX insted of MathJax

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "url": "https://github.com/codeassign/markjax/issues"
   },
   "dependencies": {
-    "marked": "*"
+    "marked": "*",
+    "katex": "*"
   },
   "devDependencies": {
     "browserify": "*",
